Bug 357816 - NM applet icon when connected to WiFi & VPN is the same as disconnected
Summary: NM applet icon when connected to WiFi & VPN is the same as disconnected
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
: 358361 361051 363037 366334 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-01-10 22:00 UTC by Najjar
Modified: 2024-12-23 18:26 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.5.4
Sentry Crash Report:


Attachments
Disconnected (30.42 KB, image/png)
2016-01-10 22:01 UTC, Najjar
Details
Wi-Fi only (36.25 KB, image/png)
2016-01-10 22:01 UTC, Najjar
Details
Wi-Fi + VPN (37.85 KB, image/png)
2016-01-10 22:02 UTC, Najjar
Details
Screenshot of issue (15.47 KB, image/jpeg)
2016-01-28 14:54 UTC, Michael D
Details
Proposed patch to fix this issue even with NetworkManager 1.2.0 (1.25 KB, patch)
2016-05-18 13:00 UTC, Jan Grulich
Details
Output of nmcli (3.56 KB, text/x-log)
2016-05-18 16:51 UTC, Najjar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Najjar 2016-01-10 22:00:50 UTC
Actually this is exactly like an old bug (#326401) in Plasma4. It wasn't in the versions before 5.5 IIRC.

When connected to WiFi only, the icon is black (connected), but when connecting to a VPN, it returns to blue (disconnected)

I've only tried it on Wireless networks, so I don't know if the same applies to LAN connections.
I've attached three images, one disconnected, one with WiFi only, and the other is WiFi+VPN.

Reproducible: Always

Steps to Reproduce:
1. Connect to Wi-Fi
2. Connect to VPN
Comment 1 Najjar 2016-01-10 22:01:29 UTC
Created attachment 96574 [details]
Disconnected
Comment 2 Najjar 2016-01-10 22:01:55 UTC
Created attachment 96575 [details]
Wi-Fi only
Comment 3 Najjar 2016-01-10 22:02:16 UTC
Created attachment 96576 [details]
Wi-Fi + VPN
Comment 4 Jan Grulich 2016-01-11 12:19:39 UTC
Git commit 190e27a1acaa4469aaeca0653fd0a4368f730ecc by Jan Grulich.
Committed on 11/01/2016 at 12:19.
Pushed by grulich into branch 'master'.

Make sure we show correct icon when a VPN connection with type of generic gets default route

REVIEW:126714

M  +35   -9    libs/declarative/connectionicon.cpp

http://commits.kde.org/plasma-nm/190e27a1acaa4469aaeca0653fd0a4368f730ecc
Comment 5 Jan Grulich 2016-01-11 12:20:35 UTC
Git commit 87c78dd5e8176b3ab79b1660396dcfb3c114fb80 by Jan Grulich.
Committed on 11/01/2016 at 12:20.
Pushed by grulich into branch 'Plasma/5.5'.

Make sure we show correct icon when a VPN connection with type of generic gets default route

REVIEW:126714

M  +35   -9    libs/declarative/connectionicon.cpp

http://commits.kde.org/plasma-nm/87c78dd5e8176b3ab79b1660396dcfb3c114fb80
Comment 6 Michael D 2016-01-28 14:53:52 UTC
I think this bug is back in 5.5.3, or someone didn't check the wired ethernet connection icon in addition to the wifi one. I've attached a screenshot.
Comment 7 Michael D 2016-01-28 14:54:17 UTC
Created attachment 96887 [details]
Screenshot of issue
Comment 8 Michael D 2016-01-28 14:54:43 UTC
I forgot to mention that I filed bug 358361 which I guess is a duplicate of this.
Comment 9 Jan Grulich 2016-02-01 10:10:29 UTC
*** Bug 358361 has been marked as a duplicate of this bug. ***
Comment 10 Jan Grulich 2016-02-01 10:12:38 UTC
@Michael D: this issue should be fixed in Plasma 5.5.4 and not in 5.5.3.
Comment 11 Jan Grulich 2016-04-04 10:52:44 UTC
*** Bug 361051 has been marked as a duplicate of this bug. ***
Comment 12 Jan Grulich 2016-05-18 12:25:11 UTC
*** Bug 363037 has been marked as a duplicate of this bug. ***
Comment 13 Jan Grulich 2016-05-18 13:00:02 UTC
Created attachment 99048 [details]
Proposed patch to fix this issue even with NetworkManager 1.2.0

Could you please test this attached patch? 

Also if you could provide output from:
1) nmcli -pretty -f all connection show
2) qdbus --literal --system org.freedesktop.NetworkManager /org/freedesktop/NetworkManager org.freedesktop.NetworkManager.PrimaryConnection
Comment 14 Najjar 2016-05-18 16:51:07 UTC
Created attachment 99055 [details]
Output of nmcli

Here's the output of nmcli
And qdbus: [Variant: [ObjectPath: /org/freedesktop/NetworkManager/ActiveConnection/85]]

NM is v1.2.2
Comment 15 Jan Grulich 2016-05-19 09:01:33 UTC
Git commit 9224934dde13301486ad9d3841965fba535b467c by Jan Grulich.
Committed on 19/05/2016 at 09:01.
Pushed by grulich into branch 'master'.

Make sure we show correct icon when a VPN connection with type of tun gets default route

M  +4    -1    libs/declarative/connectionicon.cpp

http://commits.kde.org/plasma-nm/9224934dde13301486ad9d3841965fba535b467c
Comment 16 Jan Grulich 2016-05-19 09:03:10 UTC
Thanks. I pushed the fix to master only because it depends on latest networkmanager-qt so the fix cannot be backported unfortunately.
Comment 17 Najjar 2016-06-22 21:51:28 UTC
I've updated to networkmanager-qt 5.23.0, and plasma-nm 5.6.5, but the problem is still present.

I've cleared ~/.cache and rebuilt it (kbuildsycoca5) to make sure.
Comment 18 Jan Grulich 2016-06-23 07:02:56 UTC
This issue will be fixed in Plasma 5.7. I couldn't push it to Plasma 5.6.x because it introduces a dependency on newest KDE Frameworks.
Comment 19 Jan Grulich 2016-08-04 07:31:08 UTC
*** Bug 366334 has been marked as a duplicate of this bug. ***
Comment 20 Najjar 2016-09-04 15:45:18 UTC
This issue seems to have returned in 5.7.4 in a way.
The disconnected icon appears after login (and a successful connection). To correct it, I have to kill plasmashell, then run it again (I use screen to keep it running after exiting Konsole).

I thought it was a cache issue at first (deleted, then rebuilt with kbuildsycoca5), but then I tried to just kill plasma and start without it, and I confirmed that it's not a cache issue.
Comment 21 Jan Grulich 2016-09-04 19:07:28 UTC
In this case I guess it's this bug: https://bugs.kde.org/show_bug.cgi?id=367938
Comment 22 Ben Cooksley 2024-12-23 18:26:05 UTC
Bulk transfer as requested in T17796