Make sure we show correct icon when a VPN connection with type of generic gets default route

REVIEW:126714
BUG:357816